<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@color/dark_gray"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/btn_delete_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/button_in_list_layout"
        android:src="@drawable/ic_delete" />

    <View
        android:id="@+id/divider1"
        style="@style/VerticalDivider"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/btn_download_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/button_in_list_layout"
        android:src="@drawable/ic_download"
        android:visibility="gone" />

    <View
        android:id="@+id/divider2"
        style="@style/VerticalDivider"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_text_in_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:text="@string/file_name"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:text="@string/file_size"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_xsmall" />

        <TextView
            android:id="@+id/tv_file_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:paddingBottom="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:text="@string/file_date_created"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_xsmall"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        style="@style/VerticalDivider"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />
	    
   <ImageButton
        android:id="@+id/btn_folder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        
        android:layout_gravity="center_vertical|center_horizontal"
          />

</LinearLayout>